--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.lwjglfx.deckgenius</groupId>
+      <artifactId>LWJGLfx</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
