--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,17 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+        <groupId>org.lwjgl.lwjgl</groupId>
+        <artifactId>lwjgl</artifactId>
+        <version>2.9.3</version>
+    </dependency>
+    <dependency>
+        <groupId>org.lwjgl.lwjgl</groupId>
+        <artifactId>lwjgl_util</artifactId>
+        <version>2.9.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.lwjglfx.deckgenius</groupId>
       <artifactId>LWJGLfx</artifactId>
       <version>1.0-SNAPSHOT</version>
@@ -202,6 +213,20 @@
           </archive>
         </configuration>
       </plugin>
+        <plugin>
+            <groupId>com.googlecode.mavennatives</groupId>
+            <artifactId>maven-nativedependencies-plugin</artifactId>
+            <version>0.0.7</version>
+            <executions>
+                <execution>
+                    <id>unpacknatives</id>
+                    <phase>generate-resources</phase>
+                    <goals>
+                        <goal>copy</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
