Text works but not perfect

--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-        <groupId>org.slick2d</groupId>
-        <artifactId>slick2d-core</artifactId>
-        <version>1.0.2</version>
+      <groupId>com.digiturtle.deckgenius</groupId>
+      <artifactId>LWJGLFontRendering</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
 
 
